fix: modded platforms throwing NPE